--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -24,3 +24,96 @@ header {
     transition-duration: .6s;
     transition-timing-function: ease;
   }
+  .navBar a:before,
+.navBar a:after {
+  backface-visibility: hidden;
+  border: 1px solid rgba(#fff, 0);
+  bottom: 0px;
+  content: " ";
+  display: block;
+  margin: 10px auto;
+  position: relative;
+  transition: all 200ms ease-in-out;
+  width: 0;
+}
+.navBar a:hover:after, 
+.navBar a:hover:before, 
+.navBar a:focus:after, 
+.navBar a:focus:before {
+  backface-visibility: hidden;
+  border-color: rgba(255, 255, 255, 0.7);
+  transition: width 200ms ease-in-out;
+  width: 105%;
+}
+.navBar a:hover:before  
+.navBar a:focus:before {
+  bottom: auto;
+  top: 0;
+  width: 105%;
+}
+
+.headerContent {
+  display: flex;
+}
+
+.headerText {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 10%;
+  width: 50%;
+  line-height: 2.4rem;
+  margin-top: -3%;
+  h1 {
+    margin: 5% 0%;
+  }
+  h2 {
+    text-transform: none;
+    margin: 2% 0;
+    font-size: 2rem;
+  }
+}
+
+.headerPortrait {
+  display: flex;
+  width: 40%;
+  justify-content: center;
+  img {
+    width: 100%;
+    margin-left: -20%;
+    margin-bottom: -.5%;
+  }
+}
+
+.linkContainer a {
+  letter-spacing: 5px;
+  font-size: 1rem;
+}
+
+.linkContainer a::before,
+.linkContainer a::after {
+  content: "|";
+  height: auto;
+  opacity: .4;
+  transition: all;
+  transition-duration: .6s;
+  transition-timing-function: ease;
+  position: relative;
+}
+
+.linkContainer a:hover {
+  &:before,
+  &:after {
+    opacity: .9;
+    font-weight: 700;
+    font-size: 1.3rem;
+  }
+}
+.linkContainer a:focus {
+  &:before,
+  &:after {
+    opacity: .9;
+    font-weight: 700;
+    font-size: 1.3rem;
+  }
+}
