--- a/styles/style.css
+++ b/styles/style.css
@@ -235,6 +235,121 @@ html {
   overflow: hidden;
 }
 
+body {
+  font-size: 125%;
+  font-family: 'Cabin', sans-serif;
+  font-weight: 300;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: 'Roboto Condensed', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+h2 {
+  font-size: 2.25rem;
+  text-transform: uppercase;
+  letter-spacing: .25rem;
+  font-weight: 300;
+}
+
+h3 {
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  letter-spacing: .5rem;
+  font-weight: 300;
+}
+
+h4 {
+  margin: 2% 0%;
+  color: #25272b;
+  font-size: 1.25rem;
+  text-transform: uppercase;
+  letter-spacing: .5rem;
+  font-weight: 300;
+}
+
+p {
+  font-size: .95rem;
+  line-height: 1.65rem;
+  font-weight: 300;
+  letter-spacing: 1px;
+  margin: 2% 0%;
+}
+
+.stackUse {
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #e3bd6a;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  letter-spacing: 2px;
+}
+
+a:hover,
+a:focus {
+  color: #e3bd6a;
+}
+
+.wrapper {
+  width: 90%;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+li {
+  list-style: none;
+}
+
+button {
+  background-color: #1c5c42;
+  border: 2px solid #1c5c42;
+  color: aliceblue;
+  border-radius: 5px;
+  padding: 2% 6%;
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
+}
+
+button:focus,
+button:hover {
+  background-color: #fdfdfd;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  font-weight: 400;
+  color: #1c5c42;
+}
+
+.logo {
+  padding: .75% 2%;
+  border-radius: 0;
+}
+
+.redText {
+  color: #ac1212;
+  font-size: larger;
+}
+
+.hidden {
+  display: none;
+}
+
 header {
   background-image: url(../assets/backgroundHeader.svg);
   background-size: cover;
@@ -387,4 +502,47 @@ header {
   opacity: .9;
   font-weight: 700;
   font-size: 1.3rem;
+}
+
+.skillsContent {
+  text-align: center;
+  padding: 5%;
+}
+
+.skillsContent h2 {
+  margin-top: -1%;
+  margin-bottom: 5%;
+}
+
+.iconList {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.iconContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 15%;
+  padding-top: 2%;
+}
+
+.iconContainer i,
+.iconContainer img {
+  height: 60px;
+  font-size: 4rem;
+  color: #263547;
 }
