--- a/styles/style.css
+++ b/styles/style.css
@@ -546,3 +546,80 @@ header {
   font-size: 4rem;
   color: #263547;
 }
+
+.about {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 2%;
+  background-color: #f9f9f9;
+}
+
+.aboutContent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin: 0 auto;
+}
+
+.aboutPortrait {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 30%;
+}
+
+.aboutPortrait img {
+  width: 100%;
+}
+
+.aboutText {
+  width: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-top: 5%;
+  padding-left: 5%;
+}
+
+.buttonContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 3% 0%;
+}
+
+.buttonContainer a {
+  background-color: #1c5c42;
+  border: 2px solid #1c5c42;
+  color: aliceblue;
+  border-radius: 5px;
+  padding: 2% 2%;
+  margin: 10px 5px;
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
+}
+
+.buttonContainer a:hover,
+.buttonContainer a:focus {
+  background-color: #fdfdfd;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  font-weight: 400;
+  color: #1c5c42;
+}
