--- a/styles/style.css
+++ b/styles/style.css
@@ -623,3 +623,140 @@ header {
   font-weight: 400;
   color: #1c5c42;
 }
+
+.portfolio {
+  margin-top: 2%;
+  margin-bottom: 3%;
+}
+
+.projectList {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  overflow: hidden;
+  padding: 0% 2%;
+}
+
+.projectOne,
+.projectFour {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  height: 400px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 40px;
+  width: 60%;
+}
+
+.projectOne img,
+.projectFour img {
+  -o-object-fit: fit;
+     object-fit: fit;
+  width: 100%;
+  height: 100%;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.4) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.4) 0px 8px 24px;
+}
+
+.projectOne img:hover,
+.projectOne img:focus,
+.projectFour img:hover,
+.projectFour img:focus {
+  -webkit-box-shadow: rgba(149, 157, 165, 0.8) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.8) 0px 8px 24px;
+}
+
+.projectTwo,
+.projectThree {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  height: 400px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 48%;
+}
+
+.projectTwo img,
+.projectThree img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 100%;
+  height: 100%;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.4) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.4) 0px 8px 24px;
+}
+
+.projectTwo img:hover,
+.projectTwo img:focus,
+.projectThree img:hover,
+.projectThree img:focus {
+  -webkit-box-shadow: rgba(149, 157, 165, 0.8) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.8) 0px 8px 24px;
+}
+
+h4 {
+  color: white;
+}
+
+a {
+  text-transform: uppercase;
+  padding: 2% 7%;
+  border: 1px solid aliceblue;
+  overflow: hidden;
+  position: relative;
+}
+
+a::after {
+  background: #fff;
+  content: "";
+  height: 155px;
+  left: -75px;
+  opacity: .2;
+  position: absolute;
+  top: -50px;
+  width: 35px;
+  z-index: 10;
+}
+
+.fa-times {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  font-size: larger;
+}
+
+.fa-times:hover,
+.fa-times:focus {
+  color: #e3bd6a;
+}
+
+.projectButton {
+  background-color: transparent;
+  padding: 3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border: none;
+  width: 100%;
+}
+
+.linkBox {
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin: 5% 5%;
+}
