--- a/styles/sass/_portfolio.scss
+++ b/styles/sass/_portfolio.scss
@@ -1,107 +1,136 @@
 .portfolio {
-    margin-top: 2%;
-    margin-bottom: 3%;
-    
+  margin-top: 2%;
+  margin-bottom: 3%;
+  text-align: center;
+}
+
+.projectList {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  overflow: hidden;
+  padding: 0% 1%;
+}
+
+.projectOne,
+.projectFour {
+  display: flex;
+  position: relative;
+  height: 400px;
+  justify-content: center;
+  margin-bottom: 40px;
+  width: 58%;
+  img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+    box-shadow: rgba(149, 157, 165, 0.4) 0px 8px 24px;
+    transition-property: box-shadow;
+    transition-timing-function: ease;
+    transition-duration: 0.7s;
   }
-  
-  .projectList {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    overflow:hidden;
-    padding: 0% 2%;
+  img:hover,
+  img:focus {
+    box-shadow: rgba(149, 157, 165, 0.8) 0px 8px 24px;
   }
-  
-  .projectOne,
-  .projectFour {
-    display: flex;
+}
+
+.projectTwo,
+.projectThree {
+  display: flex;
+  position: relative;
+  height: 400px;
+  justify-content: center;
+  width: 38%;
+  img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+    box-shadow: rgba(149, 157, 165, 0.4) 0px 8px 24px;
+    transition-property: box-shadow;
+    transition-timing-function: ease;
+    transition-duration: 0.7s;
+  }
+  img:hover,
+  img:focus {
+    box-shadow: rgba(149, 157, 165, 0.8) 0px 8px 24px;
+  }
+}
+.overlay {
+  visibility: hidden;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 10;
+  color: white;
+  margin: 0 auto;
+  height: 400px;
+  padding: 5%;
+  opacity: 0;
+  transition: all;
+  transition-duration: 0.3s;
+  transition-timing-function: ease;
+
+  h4 {
+    color: white;
+  }
+  a {
+    text-transform: uppercase;
+    padding: 2% 7%;
+    border: 1px solid aliceblue;
+    overflow: hidden;
     position: relative;
-    height: 400px;
-    justify-content: center;
-    margin-bottom: 40px;
-    width: 60%;
-      img {
-        object-fit: fit;
-        width: 100%;
-        height: 100%;
-        box-shadow: rgba(149, 157, 165, 0.4) 0px 8px 24px;
-        
-      }
-      img:hover,
-      img:focus {
-        box-shadow: rgba(149, 157, 165, 0.8) 0px 8px 24px;
-      }
+    transition-property: all;
+    transition-duration: 0.6s;
+    transition-timing-function: ease;
   }
-  
-  .projectTwo,
-  .projectThree {
-    display: flex;
-    position: relative;
-    height: 400px;
-    justify-content: center;
-    width: 48%;
-    img {
-      object-fit: contain;
-      width: 100%;
-      height: 100%;
-      box-shadow: rgba(149, 157, 165, 0.4) 0px 8px 24px;
-      
-    }
-    img:hover,
-    img:focus {
-        box-shadow: rgba(149, 157, 165, 0.8) 0px 8px 24px;
-      }
+  a::after {
+    background: #fff;
+    content: "";
+    height: 155px;
+    left: -75px;
+    opacity: 0.2;
+    position: absolute;
+    top: -50px;
+    transform: rotate(35deg);
+    transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+    width: 35px;
+    z-index: 10;
   }
-  
-  
-    h4 {
-      color: white;
+  a:hover,
+  a:focus {
+    &:after {
+      left: 120%;
+      transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
     }
-    a {
-      text-transform: uppercase;
-      padding: 2% 7%;
-      border: 1px solid aliceblue;
-      overflow: hidden;
-      position: relative;
-      
-    }
-    a::after {
-      background: #fff;
-      content: "";
-      height: 155px;
-      left: -75px;
-      opacity: .2;
-      position: absolute;
-      top: -50px;
-      
-      width: 35px;
-      z-index: 10;
-    }
-    
-  
-    .fa-times {
-      align-self: flex-end;
-      font-size: larger;
-    }
-    .fa-times:hover,
-    .fa-times:focus {
-      color: $gold;
-    }
-  
-  
+  }
+
+  .fa-times {
+    align-self: flex-end;
+    font-size: larger;
+  }
+  .fa-times:hover,
+  .fa-times:focus {
+    color: $gold;
+  }
+
   .projectButton {
     background-color: transparent;
-    padding: 3;
+    padding: 0;
     display: flex;
     border: none;
     width: 100%;
   }
-  
+
   .linkBox {
-    width: 90%;
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
-    margin: 5% 5%;
+    margin: 5% 0%;
   }
-  
-  
+  .active {
+    visibility: visible;
+    opacity: 1;
+  }
+}
