--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -5,6 +5,7 @@
     align-items: center;
     margin-top: 3%;
     margin-bottom: 5%;
+    background-color: $lightGrey;
       h2 {
         margin: 0 0 4% 0;
       }
