--- a/styles/style.css
+++ b/styles/style.css
@@ -839,6 +839,7 @@ header {
           align-items: center;
   margin-top: 3%;
   margin-bottom: 5%;
+  background-color: #f9f9f9;
 }
 
 .contact h2 {
@@ -901,4 +902,61 @@ header {
 
 .contactForm button {
   margin: 0 auto;
+}
+
+.bottomNav {
+  background-color: #153b2c;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.bottomNavMenu {
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 250px;
+  color: white;
+  border-bottom: 1px solid aliceblue;
+}
+
+.bottomNavMenu li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.bottomNavMenu li h3 {
+  margin-bottom: 20px;
+  padding: 5px;
+  border-bottom: 1px solid rgba(240, 248, 255, 0.507);
+}
+
+.bottomNavMenu li a {
+  margin: 3% 0%;
+  font-size: 1rem;
+  line-height: 1.65rem;
+  padding: 0;
+}
+
+.bottomNavMenu li p {
+  margin: 1% 0%;
+  font-size: 1rem;
+  line-height: 1.75rem;
+  padding: 0;
 }
