--- a/styles/style.css
+++ b/styles/style.css
@@ -960,3 +960,13 @@ header {
   line-height: 1.75rem;
   padding: 0;
 }
+
+footer {
+  background-color: #153b2c;
+  color: white;
+}
+
+.footerContent {
+  text-align: center;
+  padding: .25%;
+}
