--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -117,3 +117,81 @@ header {
     font-size: 1.3rem;
   }
 }
+
+// Mobile Nav Styling!
+
+.mobileNav {
+  display: none;
+  .menuOpen {
+    position: absolute;
+    top: 3%;
+    left: 85%;
+    padding: 0;
+    background-color: transparent;
+  }
+  .bar {
+    width: 30px;
+    height: 4px;
+    background-color: aliceblue;
+    margin: 6px;
+  }
+  
+}
+
+.mobileNav button:hover,
+.mobileNav button:focus {
+  & .bar {
+    background-color: $gold;
+  } 
+}
+
+.navBarMobile {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  top: -3%;
+  left: 0;
+  width: 100vw;
+  background-color: rgba(0 ,0 ,0 , .95);
+  z-index: 20;
+  color: aliceblue;
+  transition-timing-function: ease;
+  transition: all;
+  transition-duration: .6s;
+}
+
+.navBarMobile li {
+  font-size: 1.9rem;
+  display: flex;
+  top: -3%;
+  justify-content: center;
+  align-items: center;
+  height: 20%;
+  width: 100%;
+  border: 1px solid rgba(240, 248, 255, 0.342);
+}
+
+.navBarMobile li:hover {    
+  background-color: rgba(20, 20, 20, 0.95) ;
+}
+
+.menuClose {
+  position: absolute;
+  font-size: 2rem;
+  top: 4%;
+  right: 5%;
+}
+
+.closed {
+  visibility: hidden;
+  opacity: 0;
+  height: 0;
+}
+.open {
+  visibility: visible;
+  opacity: 1;
+  height: 95vh;
+}
