fixed overlay bug in portfolio,add mediaQueries

--- a/styles/style.css
+++ b/styles/style.css
@@ -284,7 +284,7 @@ p {
 .stackUse {
   text-transform: uppercase;
   font-weight: 700;
-  color: #e3bd6a;
+  color: #e1b500;
 }
 
 html {
@@ -304,7 +304,7 @@ a {
 
 a:hover,
 a:focus {
-  color: #e3bd6a;
+  color: #e1b500;
 }
 
 .wrapper {
@@ -525,7 +525,7 @@ header {
 
 .mobileNav button:hover .bar,
 .mobileNav button:focus .bar {
-  background-color: #e3bd6a;
+  background-color: #e1b500;
 }
 
 .navBarMobile {
@@ -890,10 +890,10 @@ header {
 
 .overlay .fa-times:hover,
 .overlay .fa-times:focus {
-  color: #e3bd6a;
+  color: #e1b500;
 }
 
-.overlay .projectButton {
+.projectButton {
   background-color: transparent;
   padding: 0;
   display: -webkit-box;
@@ -903,7 +903,7 @@ header {
   width: 100%;
 }
 
-.overlay .linkBox {
+.linkBox {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -914,7 +914,7 @@ header {
   margin: 5% 0%;
 }
 
-.overlay .active {
+.active {
   visibility: visible;
   opacity: 1;
 }
@@ -1063,4 +1063,180 @@ footer {
 .footerContent {
   text-align: center;
   padding: .25%;
+}
+
+@media (max-width: 1000px) {
+  .navBar {
+    width: 60%;
+  }
+  .buttonContainer {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .buttonContainer a {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    text-align: center;
+  }
+}
+
+@media (max-width: 940px) {
+  .wrapper {
+    padding: 0;
+  }
+  .headerText h1 {
+    font-size: 1.9rem;
+  }
+  .headerText h2 {
+    font-size: 1.4rem;
+  }
+  .headerPortrait {
+    padding-left: 2%;
+  }
+  .headerNav {
+    display: none;
+  }
+  .mobileNav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .skills {
+    padding: 5% 0%;
+  }
+  footer {
+    margin: 0;
+    padding: 1%;
+  }
+}
+
+@media (max-width: 800px) {
+  p {
+    font-size: .85rem;
+  }
+}
+
+@media (max-width: 680px) {
+  header {
+    background-image: url(/assets/headerBackgroundMobile.svg);
+    overflow-x: hidden;
+  }
+  h2 {
+    font-size: 2rem;
+  }
+  .headerText {
+    padding: 5% 5%;
+    width: 70%;
+    color: aliceblue;
+    line-height: 1.8rem;
+  }
+  .headerText h1 {
+    margin-bottom: 2%;
+  }
+  .headerText .redText {
+    color: #e1b500;
+  }
+  .headerPortrait {
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    width: 58%;
+    margin-right: -10%;
+    overflow-x: hidden;
+  }
+  .iconList {
+    padding: 0;
+  }
+  .iconContainer {
+    width: 50%;
+  }
+  .linkContainer a {
+    font-size: .8rem;
+  }
+  .aboutContent {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .aboutPortrait {
+    width: 60%;
+    margin: 0 auto;
+  }
+  .aboutText {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 2%;
+  }
+  .projectList {
+    padding: 0;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .projectOne,
+  .projectTwo,
+  .projectThree,
+  .projectFour {
+    width: 95%;
+    margin-bottom: 20px;
+  }
+  .contactForm {
+    width: 100%;
+  }
+  .contactForm .input {
+    width: 100%;
+  }
+  .bottomNavMenu {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    height: 400px;
+    padding-bottom: 3%;
+  }
+  .bottomNavMenu li {
+    width: 50%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 3%;
+  }
+  .bottomNavMenu li h3 {
+    margin-bottom: 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .headerText h2 {
+    display: none;
+  }
+  .headerPortrait {
+    width: 85%;
+    margin-right: -45%;
+  }
+  .mobileNav label {
+    left: 85%;
+  }
+  .menuClose {
+    right: 9%;
+  }
+  .bottomNavMenu {
+    height: 550px;
+  }
+  .bottomNavMenu li {
+    width: 100%;
+  }
+  .projectOne img,
+  .projectTwo img,
+  .projectThree img,
+  .projectFour img {
+    width: 100%;
+    height: 400px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .overlay a {
+    padding: 0;
+  }
 }
