--- a/styles/sass/_vars.scss
+++ b/styles/sass/_vars.scss
@@ -1,7 +1,7 @@
 $heroGreen: #1c5c42;
 $heroGreenTransparent: #1c5c42bd;
 $darkGreen: #153b2c;
-$gold: #e3bd6a;
+$gold: #e1b500;
 $navy: #263547;
 $navyTransparent: #334f7069;
 $darkGrey: #95a5a6;
