--- a/styles/sass/_mediaScreen.scss
+++ b/styles/sass/_mediaScreen.scss
@@ -49,8 +49,10 @@
   
   @media (max-width: 680px) {
     header {
-      background-image: url(/assets/headerBackgroundMobile.svg);
+      background-image: url(https://raw.githubusercontent.com/akhmed0606/web_portfolio/de1005eafe7c3d5e9b96bd3c938815ab42763d1a/assets/headerBackgroundMobile.svg);
       overflow-x: hidden;
+     
+      
     }
     h2 {
       font-size: 2rem;
